[project]
name = "slidingdoorsnet"
version = "0.1.0"
description = "Functions for building "
authors = [
    {name = "MatthewJohnHeath",email = "matthew.john.heath@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9, <3.14"
dependencies = [
    "torch (>=2.8.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
